target/generated-sources/antlr4/HelloParser.java
// Generated from Hello.g4 by ANTLR 4.4

    import wci.intermediate.*;
    import wci.intermediate.symtabimpl.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HelloParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__77=1, T__76=2, T__75=3, T__74=4, T__73=5, T__72=6, T__71=7, T__70=8, 
		T__69=9, T__68=10, T__67=11, T__66=12, T__65=13, T__64=14, T__63=15, T__62=16, 
		T__61=17, T__60=18, T__59=19, T__58=20, T__57=21, T__56=22, T__55=23, 
		T__54=24, T__53=25, T__52=26, T__51=27, T__50=28, T__49=29, T__48=30, 
		T__47=31, T__46=32, T__45=33, T__44=34, T__43=35, T__42=36, T__41=37, 
		T__40=38, T__39=39, T__38=40, T__37=41, T__36=42, T__35=43, T__34=44, 
		T__33=45, T__32=46, T__31=47, T__30=48, T__29=49, T__28=50, T__27=51, 
		T__26=52, T__25=53, T__24=54, T__23=55, T__22=56, T__21=57, T__20=58, 
		T__19=59, T__18=60, T__17=61, T__16=62, T__15=63, T__14=64, T__13=65, 
		T__12=66, T__11=67, T__10=68, T__9=69, T__8=70, T__7=71, T__6=72, T__5=73, 
		T__4=74, T__3=75, T__2=76, T__1=77, T__0=78, DecimalLiteral=79, FloatingPointLiteral=80, 
		CharacterLiteral=81, StringLiteral=82, ENUM=83, Identifier=84, COMMENT=85, 
		WS=86, LINE_COMMENT=87;
	public static final String[] tokenNames = {
		"<INVALID>", "'Float'", "'private'", "'fun'", "'new'", "'!='", "'Bool'", 
		"'void'", "'while'", "'{'", "'..'", "'&&'", "'='", "'^'", "'for'", "'null'", 
		"'do'", "'('", "'package'", "','", "'false'", "'throws'", "'Byte'", "'var'", 
		"'abstract'", "'init'", "'++'", "'<'", "']'", "'~'", "'@'", "'let'", "'static'", 
		"'protected'", "'Char'", "'final'", "'+'", "'/'", "'!in'", "'return'", 
		"'true'", "'Long'", "'class'", "'||'", "';'", "'instanceof'", "'Double'", 
		"'}'", "'extends'", "'if'", "'?'", "'when'", "'break'", "'&'", "'is'", 
		"'*'", "'this'", "'.'", "'->'", "'...'", "'Int'", "'!is'", "':'", "'['", 
		"'=='", "'|'", "'--'", "'public'", "'Short'", "'>'", "'!'", "'%'", "'in'", 
		"'else'", "'super'", "'self'", "')'", "'-'", "'import'", "DecimalLiteral", 
		"FloatingPointLiteral", "CharacterLiteral", "StringLiteral", "'enum'", 
		"Identifier", "COMMENT", "WS", "LINE_COMMENT"
	};
	public static final int
		RULE_compilationUnit = 0, RULE_packageDeclaration = 1, RULE_importDeclaration = 2, 
		RULE_typeDeclaration = 3, RULE_classDeclaration = 4, RULE_enumDeclaration = 5, 
		RULE_modifiers = 6, RULE_typeParameters = 7, RULE_typeParameter = 8, RULE_typeBound = 9, 
		RULE_enumBody = 10, RULE_enumConstants = 11, RULE_enumConstant = 12, RULE_enumBodyDeclarations = 13, 
		RULE_typeList = 14, RULE_classBody = 15, RULE_classBodyDeclaration = 16, 
		RULE_member = 17, RULE_methodDeclaration = 18, RULE_method = 19, RULE_methodDeclarationRest = 20, 
		RULE_genericMethodDeclaration = 21, RULE_fieldDeclaration = 22, RULE_constructorDeclaration = 23, 
		RULE_voidMethodDeclaratorRest = 24, RULE_constantDeclarator = 25, RULE_variableDeclarators = 26, 
		RULE_variableDeclarator = 27, RULE_variableAssignment = 28, RULE_constantDeclaratorsRest = 29, 
		RULE_constantDeclaratorRest = 30, RULE_variableDeclaratorId = 31, RULE_variable = 32, 
		RULE_variableType = 33, RULE_variableInitializer = 34, RULE_arrayInitializer = 35, 
		RULE_modifier = 36, RULE_enumConstantName = 37, RULE_typeName = 38, RULE_type = 39, 
		RULE_classType = 40, RULE_primitiveType = 41, RULE_variableModifier = 42, 
		RULE_typeArguments = 43, RULE_typeArgument = 44, RULE_qualifiedNameList = 45, 
		RULE_formalParameters = 46, RULE_formalParameterDecls = 47, RULE_formalParameter = 48, 
		RULE_lastFormalParameter = 49, RULE_parameterVariableId = 50, RULE_methodBody = 51, 
		RULE_constructorBody = 52, RULE_explicitConstructorInvocation = 53, RULE_qualifiedName = 54, 
		RULE_literal = 55, RULE_integerLiteral = 56, RULE_booleanLiteral = 57, 
		RULE_block = 58, RULE_blockStatement = 59, RULE_localVariableDeclarationStatement = 60, 
		RULE_localVariableDeclaration = 61, RULE_variableModifiers = 62, RULE_statement = 63, 
		RULE_forLoopStatement = 64, RULE_returnStatement = 65, RULE_ifStatement = 66, 
		RULE_elseStatement = 67, RULE_whileStatement = 68, RULE_whenStatement = 69, 
		RULE_whenEntry = 70, RULE_whenCondition = 71, RULE_forControl = 72, RULE_forInit = 73, 
		RULE_enhancedForControl = 74, RULE_forUpdate = 75, RULE_parExpression = 76, 
		RULE_expressionList = 77, RULE_statementExpression = 78, RULE_constantExpression = 79, 
		RULE_expression = 80, RULE_multiplicativeOp = 81, RULE_additiveOp = 82, 
		RULE_isOp = 83, RULE_addSubOneOp = 84, RULE_relationalOp = 85, RULE_equalityOp = 86, 
		RULE_primary = 87, RULE_nonWildcardTypeArguments = 88, RULE_arguments = 89;
	public static final String[] ruleNames = {
		"compilationUnit", "packageDeclaration", "importDeclaration", "typeDeclaration", 
		"classDeclaration", "enumDeclaration", "modifiers", "typeParameters", 
		"typeParameter", "typeBound", "enumBody", "enumConstants", "enumConstant", 
		"enumBodyDeclarations", "typeList", "classBody", "classBodyDeclaration", 
		"member", "methodDeclaration", "method", "methodDeclarationRest", "genericMethodDeclaration", 
		"fieldDeclaration", "constructorDeclaration", "voidMethodDeclaratorRest", 
		"constantDeclarator", "variableDeclarators", "variableDeclarator", "variableAssignment", 
		"constantDeclaratorsRest", "constantDeclaratorRest", "variableDeclaratorId", 
		"variable", "variableType", "variableInitializer", "arrayInitializer", 
		"modifier", "enumConstantName", "typeName", "type", "classType", "primitiveType", 
		"variableModifier", "typeArguments", "typeArgument", "qualifiedNameList", 
		"formalParameters", "formalParameterDecls", "formalParameter", "lastFormalParameter", 
		"parameterVariableId", "methodBody", "constructorBody", "explicitConstructorInvocation", 
		"qualifiedName", "literal", "integerLiteral", "booleanLiteral", "block", 
		"blockStatement", "localVariableDeclarationStatement", "localVariableDeclaration", 
		"variableModifiers", "statement", "forLoopStatement", "returnStatement", 
		"ifStatement", "elseStatement", "whileStatement", "whenStatement", "whenEntry", 
		"whenCondition", "forControl", "forInit", "enhancedForControl", "forUpdate", 
		"parExpression", "expressionList", "statementExpression", "constantExpression", 
		"expression", "multiplicativeOp", "additiveOp", "isOp", "addSubOneOp", 
		"relationalOp", "equalityOp", "primary", "nonWildcardTypeArguments", "arguments"
	};

	@Override
	public String getGrammarFileName() { return "Hello.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HelloParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class CompilationUnitContext extends ParserRuleContext {
		public TypeDeclarationContext typeDeclaration(int i) {
			return getRuleContext(TypeDeclarationContext.class,i);
		}
		public ImportDeclarationContext importDeclaration(int i) {
			return getRuleContext(ImportDeclarationContext.class,i);
		}
		public List<ImportDeclarationContext> importDeclaration() {
			return getRuleContexts(ImportDeclarationContext.class);
		}
		public TerminalNode EOF() { return getToken(HelloParser.EOF, 0); }
		public PackageDeclarationContext packageDeclaration() {
			return getRuleContext(PackageDeclarationContext.class,0);
		}
		public List<TypeDeclarationContext> typeDeclaration() {
			return getRuleContexts(TypeDeclarationContext.class);
		}
		public CompilationUnitContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_compilationUnit; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterCompilationUnit(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitCompilationUnit(this);
		}
	}

	public final CompilationUnitContext compilationUnit() throws RecognitionException {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_compilationUnit);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(181);
			_la = _input.LA(1);
			if (_la==T__60) {
				{
				setState(180); packageDeclaration();
				}
			}

			setState(186);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(183); importDeclaration();
				}
				}
				setState(188);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(192);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__76) | (1L << T__54) | (1L << T__46) | (1L << T__45) | (1L << T__43) | (1L << T__36) | (1L << T__34))) != 0) || _la==T__11 || _la==ENUM) {
				{
				{
				setState(189); typeDeclaration();
				}
				}
				setState(194);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(195); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PackageDeclarationContext extends ParserRuleContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public PackageDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_packageDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterPackageDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitPackageDeclaration(this);
		}
	}

	public final PackageDeclarationContext packageDeclaration() throws RecognitionException {
		PackageDeclarationContext _localctx = new PackageDeclarationContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_packageDeclaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(197); match(T__60);
			setState(198); qualifiedName();
			setState(199); match(T__34);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ImportDeclarationContext extends ParserRuleContext {
		public QualifiedNameContext qualifiedName() {
			return getRuleContext(QualifiedNameContext.class,0);
		}
		public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_importDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterImportDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitImportDeclaration(this);
		}
	}

	public final ImportDeclarationContext importDeclaration() throws RecognitionException {
		ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_importDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(201); match(T__0);
			setState(203);
			_la = _input.LA(1);
			if (_la==T__46) {
				{
				setState(202); match(T__46);
				}
			}

			setState(205); qualifiedName();
			setState(208);
			_la = _input.LA(1);
			if (_la==T__21) {
				{
				setState(206); match(T__21);
				setState(207); match(T__23);
				}
			}

			setState(210); match(T__34);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeDeclarationContext extends ParserRuleContext {
		public EnumDeclarationContext enumDeclaration() {
			return getRuleContext(EnumDeclarationContext.class,0);
		}
		public ClassDeclarationContext classDeclaration() {
			return getRuleContext(ClassDeclarationContext.class,0);
		}
		public TypeDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterTypeDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitTypeDeclaration(this);
		}
	}

	public final TypeDeclarationContext typeDeclaration() throws RecognitionException {
		TypeDeclarationContext _localctx = new TypeDeclarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_typeDeclaration);
		try {
			setState(217);
			switch (_input.LA(1)) {
			case T__76:
			case T__54:
			case T__46:
			case T__45:
			case T__43:
			case T__36:
			case T__11:
			case ENUM:
				enterOuterAlt(_localctx, 1);
				{
				setState(214);
				switch (_input.LA(1)) {
				case T__76:
				case T__54:
				case T__46:
				case T__45:
				case T__43:
				case T__36:
				case T__11:
					{
					setState(212); classDeclaration();
					}
					break;
				case ENUM:
					{
					setState(213); enumDeclaration();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				break;
			case T__34:
				enterOuterAlt(_localctx, 2);
				{
				setState(216); match(T__34);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClassDeclarationContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(HelloParser.Identifier, 0); }
		public List<ModifierContext> modifier() {
			return getRuleContexts(ModifierContext.class);
		}
		public ClassBodyContext classBody() {
			return getRuleContext(ClassBodyContext.class,0);
		}
		public TypeListContext typeList() {
			return getRuleContext(TypeListContext.class,0);
		}
		public TypeParametersContext typeParameters() {
			return getRuleContext(TypeParametersContext.class,0);
		}
		public ModifierContext modifier(int i) {
			return getRuleContext(ModifierContext.class,i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public ClassDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_classDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterClassDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitClassDeclaration(this);
		}
	}

	public final ClassDeclarationContext classDeclaration() throws RecognitionException {
		ClassDeclarationContext _localctx = new ClassDeclarationContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_classDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(222);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__76) | (1L << T__54) | (1L << T__46) | (1L << T__45) | (1L << T__43))) != 0) || _la==T__11) {
				{
				{
				setState(219); modifier();
				}
				}
				setState(224);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(225); match(T__36);
			setState(226); match(Identifier);
			setState(228);
			_la = _input.LA(1);
			if (_la==T__51) {
				{
				setState(227); typeParameters();
				}
			}

			setState(232);
			_la = _input.LA(1);
			if (_la==T__30) {
				{
				setState(230); match(T__30);
				setState(231); type();
				}
			}

			setState(236);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(234); match(T__16);
				setState(235); typeList();
				}
			}

			setState(238); classBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EnumDeclarationContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(HelloParser.Identifier, 0); }
		public EnumBodyContext enumBody() {
			return getRuleContext(EnumBodyContext.class,0);
		}
		public TypeListContext typeList() {
			return getRuleContext(TypeListContext.class,0);
		}
		public TerminalNode ENUM() { return getToken(HelloParser.ENUM, 0); }
		public EnumDeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_enumDeclaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterEnumDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitEnumDeclaration(this);
		}
	}

	public final EnumDeclarationContext enumDeclaration() throws RecognitionException {
		EnumDeclarationContext _localctx = new EnumDeclarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_enumDeclaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(240); match(ENUM);
			setState(241); match(Identifier);
			setState(244);
			_la = _input.LA(1);
			if (_la==T__16) {
				{
				setState(242); match(T__16);
				setState(243); typeList();
				}
			}

			setState(246); enumBody();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModifiersContext extends ParserRuleContext {
		public List<ModifierContext> modifier() {
			return getRuleContexts(ModifierContext.class);
		}
		public ModifierContext modifier(int i) {
			return getRuleContext(ModifierContext.class,i);
		}
		public ModifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterModifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitModifiers(this);
		}
	}

	public final ModifiersContext modifiers() throws RecognitionException {
		ModifiersContext _localctx = new ModifiersContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_modifiers);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(251);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(248); modifier();
					}
					} 
				}
				setState(253);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,12,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeParametersContext extends ParserRuleContext {
		public List<TypeParameterContext> typeParameter() {
			return getRuleContexts(TypeParameterContext.class);
		}
		public TypeParameterContext typeParameter(int i) {
			return getRuleContext(TypeParameterContext.class,i);
		}
		public TypeParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_typeParameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).enterTypeParameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HelloListener ) ((HelloListener)listener).exitTypeParameters(this);
		}
	}
